feat(Livemasjid): Adds initial livemasjid integration

--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -521,6 +521,9 @@ librouteros==3.0.0
 # homeassistant.components.soundtouch
 libsoundtouch==0.8
 
+# homeassistant.components.livemasjid
+livemasjid==0.1.2
+
 # homeassistant.components.logi_circle
 logi_circle==0.2.2
 
