--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -913,6 +913,9 @@ limitlessled==1.1.3
 # homeassistant.components.linode
 linode-api==4.1.9b1
 
+# homeassistant.components.livemasjid
+livemasjid==0.1.2
+
 # homeassistant.components.lametric
 lmnotify==0.0.4
 
